--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,12 @@ a{
     text-decoration:none;
     color:inherit;
 }
+button,
+input{
+    outline:none;
+    border:none;
+    background:none;
+}
 img{
     width:100%;
 }
@@ -26,6 +32,8 @@ header{
 }
 .navbar{
     position:fixed;
+    z-index:9;
+    background:#fff;
     width:100%;
     height:3rem;
     display:flex;
@@ -109,17 +117,39 @@ header{
 }
 
 /* Store products */
-.store-products{
+.product-content{
+    display:flex;
+    justify-content:center;
+    flex-wrap:wrap;
+    text-align:center;
+    align-items:center;
     height:80vh;
 }
-.product-content{
-    display:grid;
-    grid-template-columns:repeat(3, 1fr);
-    align-items:center;
-}
 .product-tag{
-    height:13rem;
-    padding:1rem;
+    margin:5px;
+    width:12rem;
+    height:14rem;
 }
-
+.product-tag img{
+    width:10rem;
+}
+.add{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    width:1.3rem;
+}
+.text{
+    background:#6bff97;
+    display:flex;
+    margin:5px;
+    padding:5px;
+    text-align:left;
+    height:3rem;
+    font-size:14px;
+}
+.text .price{
+    font-size:18px;
+    font-weight:bolder;
+}
 
